Fixes #97 by properly handling unwriteable fields in recursive check

--- a/extra-tests/classes/CustomMetadataDrivenTests.cls
+++ b/extra-tests/classes/CustomMetadataDrivenTests.cls
@@ -8,45 +8,48 @@ private class CustomMetadataDrivenTests {
   }
 
   @isTest
-  static void shouldRollupTextFromChildToParentOnInsert() {
+  static void shouldRollupFromChildToParentOnInsert() {
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
-    // uses FIRST with TextField__c as the Order By field
-    RollupChild__c childOne = new RollupChild__c(Name = 'Child one', TextField__c = 'a', RollupParent__c = parent.Id);
-    RollupChild__c childTwo = new RollupChild__c(Name = 'Child two', TextField__c = 'b', RollupParent__c = parent.Id);
+    // uses FIRST with TextField__c as the Order By field, MAX for the NumberField__c
+    RollupChild__c childOne = new RollupChild__c(Name = 'Child one', TextField__c = 'a', RollupParent__c = parent.Id, NumberField__c = 3);
+    RollupChild__c childTwo = new RollupChild__c(Name = 'Child two', TextField__c = 'b', RollupParent__c = parent.Id, NumberField__c = 2);
 
     Test.startTest();
     insert new List<RollupChild__c>{ childOne, childTwo };
     Test.stopTest();
 
-    parent = [SELECT Id, TextField__c FROM RollupParent__c];
+    parent = [SELECT Id, TextField__c, NumberField__c FROM RollupParent__c];
 
     System.assertEquals(childOne.TextField__c, parent.TextField__c);
+    System.assertEquals(childOne.NumberField__c, parent.NumberField__c);
   }
 
   @isTest
-  static void shouldRollupTextFromChildToParentOnUpdate() {
+  static void shouldRollupFromChildToParentOnUpdate() {
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
-    // uses FIRST with TextField__c as the Order By field
-    RollupChild__c childOne = new RollupChild__c(Name = 'Child one', TextField__c = 'a', RollupParent__c = parent.Id);
-    RollupChild__c childTwo = new RollupChild__c(Name = 'Child two', TextField__c = 'b', RollupParent__c = parent.Id);
+    // uses FIRST with TextField__c as the Order By field, MAX for the NumberField__c
+    RollupChild__c childOne = new RollupChild__c(Name = 'Child one', TextField__c = 'a', RollupParent__c = parent.Id, NumberField__c = 3);
+    RollupChild__c childTwo = new RollupChild__c(Name = 'Child two', TextField__c = 'b', RollupParent__c = parent.Id, NumberField__c = 2);
     insert new List<RollupChild__c>{ childOne, childTwo };
 
     Test.startTest();
     childOne.TextField__c = 'c';
+    childOne.NumberField__c = 0;
     update childOne;
     Test.stopTest();
 
-    parent = [SELECT Id, TextField__c FROM RollupParent__c];
+    parent = [SELECT Id, TextField__c, NumberField__c FROM RollupParent__c];
 
     System.assertEquals(childTwo.TextField__c, parent.TextField__c);
+    System.assertEquals(childTwo.NumberField__c, parent.NumberField__c);
   }
 
   @isTest
   static void shouldRollupTextFromChildToParentOnDelete() {
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
-    // uses FIRST with TextField__c as the Order By field
-    RollupChild__c childOne = new RollupChild__c(Name = 'Child one', TextField__c = 'a', RollupParent__c = parent.Id);
-    RollupChild__c childTwo = new RollupChild__c(Name = 'Child two', TextField__c = 'b', RollupParent__c = parent.Id);
+    // uses FIRST with TextField__c as the Order By field, MAX for the NumberField__c
+    RollupChild__c childOne = new RollupChild__c(Name = 'Child one', TextField__c = 'a', RollupParent__c = parent.Id, NumberField__c = 1);
+    RollupChild__c childTwo = new RollupChild__c(Name = 'Child two', TextField__c = 'b', RollupParent__c = parent.Id, NumberField__c = 2);
     insert new List<RollupChild__c>{ childOne, childTwo };
 
     Test.startTest();
@@ -55,8 +58,9 @@ private class CustomMetadataDrivenTests {
     delete childTwo; // and for my next trick ...
     Test.stopTest();
 
-    parent = [SELECT Id, TextField__c FROM RollupParent__c];
+    parent = [SELECT Id, TextField__c, NumberField__c FROM RollupParent__c];
 
     System.assertEquals(childOne.TextField__c, parent.TextField__c);
+    System.assertEquals(childOne.NumberField__c, parent.NumberField__c);
   }
 }
